# paperpilot

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: architecture.md  phase2-analyst-agent.md  phase3-compare-rag.md  phase5-review-and-refactor.md  refactor-summary.md
eval/: README.md  eval.py  rubric.json
eval/reports/: eval-cross-scale-positioning-planar.md  eval-highspeed-sicm-for-the.md  eval-rapid-scanning-method-for.md  eval-realtime-observation-of-tunneling.md  eval-study-on-contactfree-scanning.md  summary.md
examples/: README.md
examples/output/: arxiv231006825v1-cscl-10-oct.md  comparison-sicm-scanning-methods.md  cross-scale-positioning-planar.md  highspeed-sicm-for-the.md  nanoscale-surface-charge-hair.md  rapid-scanning-method-for.md  realtime-observation-of-tunneling.md  study-on-contactfree-scanning.md
src/paperpilot/: __init__.py  cli.py  config.py  orchestrator.py
src/paperpilot/agents/: analyst.py  compare.py
src/paperpilot/sources/: __init__.py  semantic_scholar.py  xmol.py
src/paperpilot/store/: vector_store.py
src/paperpilot/templates/: comparison.md.j2  paper_note.md.j2
src/paperpilot/tools/: figure_tools.py  pdf_tools.py  template_tools.py
tests/: test_analyst.py  test_compare.py  test_pdf_tools.py  test_sources.py  test_template_tools.py  test_vector_store.py
