[project]
name = "paperpilot"
version = "0.1.0"
description = "AI-powered scientific paper analysis agent — read, summarize, compare, and search papers from your terminal."
readme = "README.md"
license = "MIT"
authors = [
    { name = "qingyingyang200-cmd", email = "qingyingyang2003@gmail.com" }
]
requires-python = ">=3.11"
keywords = ["ai", "agent", "paper", "research", "scientific", "langgraph"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "langgraph>=0.4.0",
    "langchain-anthropic>=0.4.0",
    "langchain-openai>=0.3.0",
    "pymupdf>=1.25.0",
    "chromadb>=1.0.0",
    "typer>=0.15.0",
    "rich>=14.0.0",
    "jinja2>=3.1.0",
    "httpx>=0.28.0",
    "beautifulsoup4>=4.14.3",
]

[project.scripts]
paperpilot = "paperpilot.cli:app"

[build-system]
requires = ["uv_build>=0.11.8,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "ruff>=0.11.0",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "W"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["paperpilot"]
